--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Happy Birthday Trisha</title>
+  <title>Happy Trisha Day</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Lato:wght@300;400&display=swap" rel="stylesheet">
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -448,11 +448,10 @@
   <div class="reflection">
     <p>Writing these letters felt like flipping through old photos—each memory so vivid, so perfectly you.</p>
     <p>Some will make you smile. Some might make you emotional. All of them are true.</p>
-    <p>Happy 22nd birthday, best friend. Thank you for growing into someone so incredible.</p>
+    <p>Happy 22nd birthday, bestiee. Thank you for growing into someone so incredible.</p>
   </div>
   
   <footer>
-    <p>These words are my gift. Your friendship is mine.</p>
     <p>May this year bring you everything you've been dreaming of.</p>
     <p class="signature">With love, always</p>
   </footer>
